hphp/hack/test/typecheck/case_type/case_type_cyclic_case_type2.php.exp
ERROR: File "case_type_cyclic_case_type2.php", line 4, characters 11-19:
Cyclic type definition (Typing[4014])
  File "case_type_cyclic_case_type2.php", line 4, characters 23-31:
  Cyclic use is here
ERROR: File "case_type_cyclic_case_type2.php", line 4, characters 11-19:
Invalid case type declaration. More than one variant of `Recursive` could contain values with the same runtime tag (Typing[4475])
  File "case_type_cyclic_case_type2.php", line 4, characters 23-31:
  This is the type `Recursive`, which includes **ints** because it is a cyclic type
  File "case_type_cyclic_case_type2.php", line 4, characters 23-31:
    via this variant of the case type `Recursive`
  File "case_type_cyclic_case_type2.php", line 4, characters 35-37:
  It overlaps with `int`, which also includes **ints**
